refactor book implementation